<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_today">

    <fragment
        android:id="@+id/nav_today"
        android:name="com.fitnessapp.ui.today.TodayFragment"
        android:label="@string/tab_today"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/nav_workout"
        android:name="com.fitnessapp.ui.workout.WorkoutFragment"
        android:label="@string/tab_workout"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/nav_vitals"
        android:name="com.fitnessapp.ui.vitals.VitalsFragment"
        android:label="@string/tab_vitals"
        tools:layout="@layout/fragment_vitals" />

    <fragment
        android:id="@+id/nav_insights"
        android:name="com.fitnessapp.ui.insights.InsightsFragment"
        android:label="@string/tab_insights"
        tools:layout="@layout/fragment_insights" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.fitnessapp.ui.profile.ProfileFragment"
        android:label="@string/tab_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
